<resources>
    <string name="app_name">NewCheHeLi</string>
    <!-- Strings related to login -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_face">头像</string>
    <string name="user_nick">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_sex_tip">设置性别</string>
    <string name="user_address">地址</string>
    <string name="user_address_tip">请设置地址</string>
    <string name="name">姓名</string>
    <string name="map_go">导航</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
